# katas-gilded-rose-python

./: .gitignore  LICENSE  README.md  gilded_rose.py  pyproject.toml  setup.sh
gildedrose_console/: gilded_rose.py
test/: test_assemblytests.py
